--- a/game.html
+++ b/game.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/header.css">
-    <link rel="stylesheet" href="CSS/game.css">
     <link rel="stylesheet" href="CSS/footer.css">
+    <link rel="stylesheet" href="CSS/game.css">
     <title>Projet Batman 1</title>
 </head>
 <body>
     <!-- Ceci est une entete du page -->
-    <header>
+    <header class="game-header">
         <div class="contour1">
             <nav id="haut" class="menu-entete">
                 <div class="logo">
@@ -25,12 +25,18 @@
                 </div>
             </nav>
             <!-- Introduction sur menu -->
-            <div class="texte-game">
-                <p>LET'S PLAY A</p>
-                <p>LITTLE GAME...</p>
+            <div class="intro">
+                <div class="texte-menu">
+                    <p>Au nom de ses parents assassinés, Bruce Wayne mène  une guerre éternelle contre les criminels de Gotham City.</p>
+                    <p>Il est vengeur. Il est la nuit.</p>
+                    <p class="batman">Il est Batman</p>
+                </div>
+                <div class="bouton-menu">
+                    <a href="#heros"><button class="bouton1">VOIR LE HEROS</button></a>
+                    <a href="#advi"><button class="bouton2">LES ADVERSAIRES</button></a>
+                </div>
             </div>
         </div>
-
         <div class="nav-fixe">
             <ul>
                 <!-- Flèche haut -->
@@ -50,8 +56,7 @@
             </ul>
         </div>
     </header>
-    <main>
-    </main>
+    <main></main>
     <footer>
         <div class="contour-foot">
             <div class="pied-page">
