--- a/game.html
+++ b/game.html
@@ -51,7 +51,56 @@
             </ul>
         </div>
     </header>
-    <main></main>
+    <main>
+        <div id="game">
+            <div class="fleche">
+                <!-- Chevron bas -->
+                <img src="./Logos/flèche_down_header.png" alt="">
+            </div>
+            <div class="game-text1">
+                <p>connaissez vous bien le chevalier noir ?</p><br><br>
+                <img src="Illustrations2/Batgame_2.png" alt="">
+            </div>
+            <div class="game-text2">
+                <button>démarrer le quiz</button>
+            </div>
+        </div>
+
+        <!------------------ Contenue sur les questions du jeux------------- -->
+        <div class="jeux">
+            <div class="num-ordre">
+                <!-- Chevron bas -->
+                <p>11/15</p>
+            </div>
+                <div class="contenu-jeux">
+                    <div class="image-jeux">
+                        <img src="Illustrations2/Batgame_3.png" alt="">
+                    </div>
+
+                    <div class="question">
+                        <p>Quel est l'autre nom de l'Homme-Mystère ?</p><br><br>
+
+                    <div class="question-jeux">
+                        <div class="reponse">
+                            <input type="checkbox" id="">
+                            <label for="">Les Sphinx</label>
+                        </div>
+                        <div class="reponse">
+                            <input type="checkbox" id="">
+                            <label for="">Saphir</label>
+                        </div>
+                        <div class="reponse">
+                            <input type="checkbox" id="">
+                            <label for="">Le Joker</label>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="game-text2">
+                <button>question suivante</button>
+            </div>
+        </div>
+    </main>
     <footer>
         <div class="contour-foot">
             <div class="pied-page">
