--- a/game.html
+++ b/game.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+.q<!DOCTYPE html>
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
@@ -82,16 +82,16 @@
 
                     <div class="question-jeux">
                         <div class="reponse">
-                            <input type="checkbox" id="">
-                            <label for="">Les Sphinx</label>
+                            <input type="checkbox" id="sphinx">
+                            <label for="sphinx">Les Sphinx</label>
                         </div>
                         <div class="reponse">
-                            <input type="checkbox" id="">
-                            <label for="">Saphir</label>
+                            <input type="checkbox" class="saphir" id="saphir">
+                            <label for="saphir">Saphir</label>
                         </div>
                         <div class="reponse">
-                            <input type="checkbox" id="">
-                            <label for="">Le Joker</label>
+                            <input type="checkbox" class="joker" id="joker">
+                            <label for="joker">Le Joker</label>
                         </div>
                     </div>
                 </div>
