--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                 <div id="annonce">
                     <div class="pre-sui">
                         <!-- icon flèche gauche -->
-                        <a href="#"><img src="./Logos/icon_flèche_1.png" alt=""></a>
+                        <button class="control" onclick="precedent()"><img  src="./Logos/icon_flèche_1.png" alt=""></button>
                     </div>
                     <div id="texte-annonce">
                         <img class="annonce-image" src="./Illustrations/Bathome_ba1.png" alt="">
@@ -243,13 +243,12 @@
                     </div>
                     <div class="pre-sui next">
                         <!-- Icon flèche droite -->
-                        <a href="#vi"><img src="./Logos/icon_flèche_2.png" alt=""></a>
+                        <button class="control" onclick="suivant()" ><img src="./Logos/icon_flèche_2.png" alt=""></button>
                     </div>
                 </div>
                 <div class="video">
-                    <img src="" alt="">
-                    <video controls poster="./Illustrations/Bathome_ba2.png">
-                        <source src="./video/Batman _ The_Dark Knight _Rises_Christian_Bale.mp4" type="video/mp4">
+                    <video class="bande_annonce" controls poster="./Illustrations/Bathome_ba2.png">
+                        <source src="./video/bande_annonce1.mp4" type="video/mp4">
                      </video>
                 </div>
             </div>
